# Brick

./: .travis.yml  CMakeLists.txt  README.md
cmake/: ExternalAntlr4Cpp.cmake
data/: dead_simple.ast  easy.ast  test.gv
grammar/: Algebra.g4  Math.g4  MathLexerGrammar.g4  MathParserGrammar.g4
include/: Brick.hpp  brick.hpp  utils.hpp
include/AST/: AST.hpp  AST_builder.hpp  AST_evaluator.hpp  Reader.hpp  ast_builder.hpp  ast_evaluator.hpp  bfs_iterator.hpp  build_ast_visitor.hpp  dfs_iterator.hpp  hashed.hpp  iterator.hpp  key.hpp  node.hpp  parse.hpp  shit_iterator.hpp  tree.hpp  tree_shape_listener.hpp
include/TreeBase/: TreeBase.hpp
include/io/: io.hpp
include/math/AST/: build_ast_visitor.hpp  node.hpp
include/transformer/: transformer.hpp
include/tree/: .tree.hpp.swp  bfs_iterator.hpp  dfs_iterator.hpp  hashed.hpp  iterator.hpp  tree.hpp  tree2.hpp
include/tree_base/: tree_base.hpp
include/utils/: utils.hpp
parser/: TLexer.g4
scripts/: viz
src/: CMakeLists.txt  lexer.cc  parser.cc  transformer.cc
src/AST/: AST.cc  AST_builder.cc  CMakeLists.txt  bfs_iterator.cc  dfs_iterator.cc  iterator.cc  node.cc  parse.cc
src/utils/: CMakeLists.txt  utils.cc
test/: CMakeLists.txt  tree_tests.cc  unit_tests.cc
test/AST/: AST.cc  CMakeLists.txt  bfs_iterator.cc  dfs_iterator.cc  iterator.cc  node.cc  parse.cc
test/data/: a.ast
test/include/: test_utils.hpp  utils.hpp
test/io/: CMakeLists.txt  io.cc
test/parser/: CMakeLists.txt  parser.cc
test/tree/: CMakeLists.txt  bfs_iterator.cc  dfs_iterator.cc  hashed.cc  iterator.cc  tests.cc  tree.cc  unit_tests.cc
