cmake_minimum_required (VERSION 3.5.1)

project (BRICK VERSION 0.1 LANGUAGES CXX)
set (CMAKE_CXX_STANDARD 17)

set (CMAKE_CXX_FLAGS "-Wall -O3")
set (CMAKE_CXX_FLAGS_DEBUG "-Wall -g")
set (CMAKE_CXX_FLAGS_RELEASE "-O3")

set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/Debug/lib")
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/Debug/lib")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/Debug/bin")
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/Release/lib")
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/Release/lib")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/Release/bin")
set (TEST_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/bin")

set (include_dir "${CMAKE_CURRENT_SOURCE_DIR}/include")

option (MAKE_TESTS "MAKE_TESTS" OFF)

if (MAKE_TESTS)
    enable_testing()
    set (test_data_dir "${CMAKE_CURRENT_SOURCE_DIR}/test/data")
    set (test_include_dir "${CMAKE_CURRENT_SOURCE_DIR}/test/include")
    add_subdirectory("./deps/googletest")
    add_subdirectory("./test")
endif()

add_subdirectory("./src")
