macro (setup_test test_name test_file)
  add_executable (${test_name} ${test_file} ${grammar_dependencies})
  add_dependencies (${test_name} antlr4cpp antlr4cpp_generation_brick)
  target_include_directories (${test_name} PRIVATE ${include_dir})
  target_link_libraries (${test_name} brick_ast gtest_main antlr4-runtime)
  add_test (${test_name} ${TEST_RUNTIME_OUTPUT_DIRECTORY}/${test_name})
endmacro ()

setup_test (AST_tests AST.cc)
setup_test (node_tests node.cc)
setup_test (parse_tests parse.cc)
setup_test (iterator_tests iterator.cc)
setup_test (dfs_iterator dfs_iterator.cc)
setup_test (bfs_iterator bfs_iterator.cc)