add_executable (tree_tests "tree.cc")
add_executable (iterator_tests "iterator.cc")
add_executable (bfs_iterator_tests "bfs_iterator.cc")
add_executable (dfs_iterator_tests "dfs_iterator.cc")
add_executable (hashed_tests "hashed.cc")

target_include_directories (tree_tests PRIVATE ${include_dir})
target_include_directories (iterator_tests PRIVATE ${include_dir})
target_include_directories (bfs_iterator_tests PRIVATE ${include_dir})
target_include_directories (dfs_iterator_tests PRIVATE ${include_dir})
target_include_directories (hashed_tests PRIVATE ${include_dir})

target_link_libraries (tree_tests gtest_main)
target_link_libraries (iterator_tests gtest_main)
target_link_libraries (bfs_iterator_tests gtest_main)
target_link_libraries (dfs_iterator_tests gtest_main)
target_link_libraries (hashed_tests gtest_main)

add_test(tree_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
add_test(iterator_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
add_test(bfs_iterator_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
add_test(dfs_iterator_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
add_test(hashed_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
