add_executable (tree_tests "tree.cc" ${antlr4cpp_src_files_brick})
add_executable (iterator_tests "iterator.cc" ${antlr4cpp_src_files_brick})
add_executable (bfs_iterator_tests "bfs_iterator.cc" ${antlr4cpp_src_files_brick})
add_executable (dfs_iterator_tests "dfs_iterator.cc" ${antlr4cpp_src_files_brick})
add_executable (hashed_tests "hashed.cc" ${antlr4cpp_src_files_brick})

add_dependencies (tree_tests antlr4cpp antlr4cpp_generation_brick)
add_dependencies (iterator_tests antlr4cpp antlr4cpp_generation_brick)
add_dependencies (bfs_iterator_tests antlr4cpp antlr4cpp_generation_brick)
add_dependencies (dfs_iterator_tests antlr4cpp antlr4cpp_generation_brick)
add_dependencies (hashed_tests antlr4cpp antlr4cpp_generation_brick)

target_include_directories (tree_tests PRIVATE ${include_dir})
target_include_directories (iterator_tests PRIVATE ${include_dir})
target_include_directories (bfs_iterator_tests PRIVATE ${include_dir})
target_include_directories (dfs_iterator_tests PRIVATE ${include_dir})
target_include_directories (hashed_tests PRIVATE ${include_dir})

target_link_libraries (tree_tests gtest_main antlr4-runtime)
target_link_libraries (iterator_tests gtest_main antlr4-runtime)
target_link_libraries (bfs_iterator_tests gtest_main antlr4-runtime)
target_link_libraries (dfs_iterator_tests gtest_main antlr4-runtime)
target_link_libraries (hashed_tests gtest_main antlr4-runtime)

add_test(tree_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
add_test(iterator_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
add_test(bfs_iterator_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
add_test(dfs_iterator_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
add_test(hashed_tests ${TEST_RUNTIME_OUTPUT_DIRECTORY}/tree_tests)
